@@ -1,6 +1,7 @@
 1.5.0
 -----
 1. Add option to set progressbar colour.
+2. Add option to use menubar colours for popup menus.
 
 1.4.1
 -----
